style.css
body {
	font-family: helvetica, arial;
	margin: 0;
}

#content {
	background-color: #ecfcfe;
	margin: 0;
}

.hidden {
	visibility: hidden;
}

.ui-page-theme-a a, html .ui-bar-a a, html .ui-body-a a, html body .ui-group-theme-a a {
	text-decoration: none;
	font-weight: 500;
}

#headfooting-container {
	margin: auto;
	height: 100%;
	text-align: center;
}

.navButton {
	display: inline;
	max-width: 5em;
	margin: 3% 2% 5% 2%;
}

.navButtonSkip {
	display: none;
}

#category {
	font-size: 1.4em;
}

#number {
	margin: 3%;
	font-size: .9em;
}

#top-headfooting img {
	display: block;
	margin: 0 10% 0 10%;
	max-width: 80%;
	clear: both;
}

#bottom-headfooting img {
	display: block;
	margin: 0 10% 0 10%;
	max-width: 80%;
	clear: both;
}

#welcome {
	width: 100%;
	font-size: 2em;
	padding: .7em 0em .7em 0em;
	line-height: 1.5em;
	box-shadow: 0px 0px 5px #000;
	background-color: #2edbee;
	text-align: center;
	color: #ffffff;
	position: relative;
}

#under-welcome {
	width: 100%;
	overflow: hidden;
	clear: both;
}

.intro-text {
	clear: both;
	max-width: 100%;
	margin: 1.5em;
	font-size: 1em;
	padding: 1em;
	-moz-border-radius: 5px;
	border-radius: 5px;
	border-style: solid;
	border-color: #2edbee;
	background: #fff;
}

.headfooting-img {
	text-align: center;
	margin: 0 5% 0 5%;
	height: 100%;
}

.headfooting-img img {
	vertical-align: middle;
	margin-left: 2%;
	margin-right: 2%;
	max-height: 60%;
	max-width: 80%;
	border: 1px;
	border-style: solid;
	border-color: #323232;
	box-shadow: 0px 1px 2px #000;
}

#socialButtons {
	padding: 0 0 2% 0;
	text-align: center;
}

.social {
	padding: 0;
}

.social li {
	display: inline;
	margin-left: 10px;
	margin-right: 10px;
	width: 170px;
}

.fb-like {
    position:relative;
    top:-8px;
}

}

@media screen and (min-width: 40.5em) and (max-width: 60em) {

	#top-headfooting img {
		margin: 0;
		max-width: 40%;
	}

	#bottom-headfooting img {
		margin: 0;
		clear: none;
		float: left;
		max-width: 40%;
	}

	.intro-text {
		float: left;
		clear: none;
		max-width: 45%;
		margin-top: 2em;
		margin-left: 1em;
		font-size: 1em;
	}

	#welcome {
		font-size: 3em;
		line-height: 1.2em;
		padding: .3em 0em .3em 0em;
	}

	.headfooting-img {
		margin: 2em;	
	}

	.headfooting-img img {
		max-height: 70%;
	}

	#category {
		font-size: 1.4em;
		padding: 2%;
	}

	.navButton, .navButtonSkip {
		display: inline;
		max-width: 5em;
		margin: 1% 1% 3% 1%;
	}

	#followButton {
		padding: 0 0 3% 0;
	}
	
}

@media screen and (min-width: 60em) {

	#top-headfooting img {
		margin: 0;
		max-width: 30%;
	}

	#bottom-headfooting img {
		margin: 0;
		clear: none;
		float: left;
		max-width: 30%;
	}

	.intro-text {
		float: left;
		clear: none;
		max-width: 45%;
		margin: 2em 5% 0 5%;
		font-size: 1.30em;
	}

	#welcome {
		font-size: 5em;
		line-height: 1.2em;
		padding: .3em 0em .3em 0em;
	}

	.headfooting-img {
		margin: 5% 0 1% 0;		
	}

	.headfooting-img img {
		max-height: 70%;
	}

	#category {
		text-align: center;
		font-size: 1.2em;
		padding: 1%;
	}

	#number {
		text-align: center;
		font-size: .9em;
		padding: 0;
		margin: 0;
	}

	.navButton, .navButtonSkip {
		display: inline;
		max-width: 5em;
		margin: .5% 1% 2% 1%;
	}


	#followButton {
		padding: 0 0 2% 0;
	}
	
}

